--- a/pom.xml
+++ b/pom.xml
@@ -139,10 +139,15 @@
         </profile>
         <profile>
             <id>bamboo</id>
+            <activation>
+                <file>
+                    <missing>${project.basedir}/ssl-proxies/pom.xml</missing>
+                </file>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
-                        <inherited>false</inherited>                                    
+                        <inherited>false</inherited>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>1.1</version>
