--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -21,4 +21,16 @@
         </resources>
     </build>
 
+    <repositories>
+        <repository>
+            <id>globus-releases</id>
+            <name>Globus Release Repository</name>
+            <url>http://repo.globus.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>globus-snapshots</id>
+            <name>Globus Snapshot Repository</name>
+            <url>http://repo.globus.org/content/groups/public-snapshots/</url>
+        </repository>
+    </repositories>
 </project>
